# citeproof

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: evaluation.md
examples/: claim_support.jsonl  draft.md  eval_suite.json
examples/diagnostics/: claim_support.jsonl
examples/edge_cases/: claim_support.jsonl
examples/hallucination/: draft.md  expected.jsonl  references.bib
examples/heldout_real/: claim_support.jsonl
src/citeproof/: __init__.py  (+53 more)
tests/: test_academic_count_quantities.py  test_academic_paraphrase_support.py  test_adjudicator.py  test_assertion_lens.py  test_attribute_lens.py  test_benchmark.py  test_benchmark_compare.py  test_bibliography.py  test_claims.py  test_clinical_effect_slots.py  test_comparison_lens.py  test_context_lens.py  test_contrast_metric_slots.py  test_dashboard.py  test_data_origin_slots.py  test_diagnostics_suite.py  test_document_render.py  test_draft_eval.py  test_entailment.py  test_entailment_assertion_roles.py  test_entailment_attributes.py  test_entailment_context.py  test_entailment_method_attributes.py  test_entailment_negation.py  test_entailment_outcome_protocol.py  test_entailment_qualitative.py  test_entailment_quantities.py  test_entailment_resource_paraphrases.py  test_entailment_statistical.py  test_entailment_strength.py  test_entailment_technical_properties.py  test_eval_runner.py  test_eval_suite.py  test_eval_suite_layer_gates.py  test_external_benchmarks.py  test_fact_lenses.py  test_hallmark.py  test_mapping_lens.py  test_measurement_slot_conflicts.py  test_metadata.py  (+25 more)
(+78 files in other folders)
