[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citeproof"
version = "0.1.0"
description = "Claim-source verification for citation-bearing drafts."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Sebastian Boehler" }]
dependencies = ["pypdf>=5.0"]

[project.optional-dependencies]
mcp = ["mcp>=1.27,<2"]
nli = ["torch>=2.0", "transformers>=4.40"]
dev = ["pytest>=8.0"]

[project.scripts]
citeproof = "citeproof.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/citeproof"]
